syntax = "proto3";
package dcs.controller.v0;
import "dcs/common/v0/common.proto";
option csharp_namespace = "RurouniJones.Dcs.Grpc.V0.Controller";
option go_package = "github.com/DCS-gRPC/go-bindings/dcs/v0/controller";

service ControllerService {
  // https://wiki.hoggitworld.com/view/DCS_option_alarmState
  rpc SetAlarmState(SetAlarmStateRequest) returns (SetAlarmStateResponse) {}

  // https://wiki.hoggitworld.com/view/DCS_func_getDetectedTargets
  rpc GetDetectedTargets(GetDetectedTargetsRequest) 
    returns (GetDetectedTargetsResponse) {}

  // We split this into two separate calls to aid in clarity
  // https://wiki.hoggitworld.com/view/DCS_task_orbit 
  rpc PerformOrbitTask(PerformOrbitTaskRequest)
    returns (PerformOrbitTaskResponse) {}

  // We split this into two separate calls to aid in clarity
  // https://wiki.hoggitworld.com/view/DCS_task_orbit 
  rpc PerformRacetrackTask(PerformRacetrackTaskRequest)
    returns (PerformRacetrackTaskResponse) {}
}

message SetAlarmStateRequest {
  enum AlarmState {
    ALARM_STATE_UNSPECIFIED = 0;
    ALARM_STATE_AUTO = 1;
    ALARM_STATE_GREEN = 2;
    ALARM_STATE_RED = 3;
  }

  oneof name {
    string group_name = 1;
    string unit_name = 2;
  }
  AlarmState alarm_state = 3;
}

message SetAlarmStateResponse {
}

message GetDetectedTargetsRequest {
  enum DetectionType {
    DETECTION_TYPE_UNSPECIFIED = 0;
    DETECTION_TYPE_VISUAL = 1;
    DETECTION_TYPE_OPTIC = 2;
    DETECTION_TYPE_RADAR = 4;
    DETECTION_TYPE_IRST = 8;
    DETECTION_TYPE_RWR = 16;
    DETECTION_TYPE_DLINK = 32;
  }
  string unit_name = 1;
  optional bool include_object = 2;
  optional DetectionType detection_type = 3;
}

message GetDetectedTargetsResponse {
  repeated dcs.common.v0.Contact contacts = 1; 
}

enum TaskingPriority {
  TASKING_PRIORITY_IMMEDIATE = 0;
  TASKING_PRIORITY_QUEUE = 1;
}

message PerformOrbitTaskRequest {
  oneof name {
    string group_name = 1;
    string unit_name = 2;
  }
  // The alt field in the Input position is ignored as an optional value is used elsewhere
  dcs.common.v0.InputPosition orbit_point = 3;
  TaskingPriority priority = 4;
  optional int32 speed = 5;
  optional int32 altitude = 6;
}

message PerformOrbitTaskResponse {
}

message PerformRacetrackTaskRequest {
  oneof name {
    string group_name = 1;
    string unit_name = 2;
  }
  // The alt field in the Input position is ignored as an optional value is used elsewhere
  dcs.common.v0.InputPosition start_point = 3;
  dcs.common.v0.InputPosition end_point = 4;
  TaskingPriority priority = 5;
  optional int32 speed = 6;
  optional int32 altitude = 7;
}

message PerformRacetrackTaskResponse {
}